# YapDatabase

CPP/: .gitignore  CMakeLists.txt
CPP/include/: YapDatabase.h
CPP/include/internal/: YapDatabaseString.h  YapNull.h
CPP/src/: YapDatabase.cc
